Fix bugs on mobile bg

--- a/css/carousel.css
+++ b/css/carousel.css
@@ -1161,3 +1161,106 @@
   color: rgb(0, 0, 0);
   text-align: center; }
   }
+
+
+  /*nft card mobile*/
+
+@media only screen and (max-width: 720px) {  
+
+  .mobile-char{
+    font-size: 75%; 
+    font-family: 'MagicMedieval', sans-serif;
+    font-weight: 700;
+}
+
+  .mobile-card {
+  position: relative;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+  background-color: rgba(255, 255, 255, 0);
+  -webkit-background-clip: border-box;
+  background-clip: border-box;
+  border: 0.0rem solid rgba(0, 0, 0, 0.125);
+  border-radius: 0.0rem; }
+  
+
+  
+      .mobile-card-flex{
+          display: -webkit-box; 
+          display: -ms-flexbox;
+          display: flex;
+          -ms-flex-wrap: wrap;
+          flex-wrap: nowrap;
+          margin-right: -15px;
+          margin-left: -15px;
+          flex-direction: row;
+          justify-content: center;
+          align-content: center;
+          align-items: center;
+          }
+
+
+    .mobile-card {
+      position: relative;
+      align-items: center;
+      display: flex;
+      flex-direction: column;
+      min-width: 0;
+      word-wrap: break-word;
+      background-color: rgba(255, 255, 255, 0);
+      -webkit-background-clip: border-box;
+      background-clip: border-box;
+      border: 0.0rem solid rgba(0, 0, 0, 0.125);
+      border-radius: 0.0rem; }
+      
+      .nft-text{
+          font-size: 79%; 
+          font-family: 'MagicMedieval', sans-serif;
+          font-weight: 700;
+        }
+   
+        .how-img {
+          text-align: center;
+          margin-top: -7%;
+          padding: 0%;
+          width: 165px;
+      }
+      
+  
+          .mobile-card-flip {
+            perspective: 1000px;
+          }
+          .mobile-card-flip:hover .mobile-flip, .mobile-card-flip.hover .mobile-flip {
+            transform: rotateY(180deg);
+          }
+          .mobile-card-flip, .mobile-front, .mobile-back {
+            width: 100%;
+            height: 360px;
+          }
+          .mobile-flip {
+            transition: 0.6s;
+            transform-style: preserve-3d;
+            position: relative;
+          }
+          .mobile-front, .mobile-back {
+            -webkit-backface-visibility:hidden;
+            backface-visibility: hidden;
+            -webkit-backface-visibility:hidden;
+            backface-visibility: hidden;
+            position: absolute;
+            top: 0;
+            left: 0;
+          }
+          .mobile-front {
+            z-index: 2;
+            transform: rotateY(0deg);
+          }
+          .mobile-back {
+            transform: rotateY(180deg);
+            
+          }
+    
+        }
